fix(editor): aprimora visual builder, sincronização do canvas, chat IA n8n e limpa avisos no backend